[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.3"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
bitflags = "1.2.1"
uuid = { version = "0.8.1", default-features = false }
heapless = "0.5.1"
rand_core = "0.5.1"

# The `nisty` feature can be enabled to provide P-256 signature support for Cortex-M4 and M33 chips.
[dependencies.nisty]
git = "https://github.com/nickray/nisty.git"
rev = "a59a881"
default-features = false
optional = true

# The `ring` feature can be enabled to provide P-256 signatures for non-embedded use cases.
[dependencies.ring]
version = "0.16.9"
default-features = false
optional = true

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
[dependencies.log]
version = "0.4.8"
optional = true

[dev-dependencies]
ring = "0.16.9"

[dev-dependencies.nisty]
git = "https://github.com/nickray/nisty.git"
rev = "a59a881"
